<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkInAccoutLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shattered"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/checkInAccountTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/checkInCreateAccountTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/checkinFullnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fullnameHint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/checkinEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/checkinPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/checkinConfirmPassEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirmPassHint"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/checkInEventLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/checkInEventTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/checkInEventTextView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/checkinEventIDEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eventIdHint"
            android:inputType="textVisiblePassword" />

        <EditText
            android:id="@+id/checkinAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addressHint"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/checkinPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phoneHint"
            android:inputType="phone" />

        <Button
            android:id="@+id/checkinSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/checkinSubmitButton" />

    </LinearLayout>

</LinearLayout>
